created lemma for open embeddings in Y_{A,B,C}^L

--- a/preamble.sty
+++ b/preamble.sty
@@ -145,6 +145,7 @@
 % PRODUCT(S) OF ORBITS
 \newcommand{\xprod}[2][]{X_{#2}^{#1}}
 \newcommand{\yprod}[2][]{Y_{#2}^{#1}}
+\newcommand{\zprod}[2][]{\tilde{Y}_{#2}^{#1}}
 
 % quiver for presentation of q schur algebras.
 \newcommand{\presentationquiver}[1][n,r]{\Gamma(#1)}
