separated proofs of the open embedding lemmas in Y_{A,B,C} from the proof of associativity to improve structure.

--- a/preamble.sty
+++ b/preamble.sty
@@ -130,13 +130,13 @@
 \newcommand{\triflags}{{\flags\!\times\!\flags\!\times\!\flags}}
 
 % compositions (of r into n parts)
-\newcommand{\compositions}[1][n,r]{\Lambda_0(#1)}
+\newcommand{\compositions}{{\Lambda_0}}
 
 % periodic characteristic matrix of a pair.
 \newcommand{\type}[2]{\operatorname{A}(#1,#2)}
 
 % set of periodic characteristic matrices.
-\newcommand{\matrices}[1][n,r]{\Lambda_1(#1)}
+\newcommand{\matrices}{{\Lambda_1}}
 
 % row and column sums of characteristic matrix.
 \newcommand{\ro}{\operatorname{ro}}
