--- a/report.tex
+++ b/report.tex
@@ -887,7 +887,7 @@ This shows that $\xprod[L]{C}$ is dense in $\xprod[L]{A,B}$ for some $C\in\matri
 
 \section{Associativity}
 
-Refer to Section \ref{sec:triple-product} for definitions of the spaces $\xprod[L]{A,B,C}$ and $\yprod[L]{A,B,C}$.
+Refer to Section \ref{sec:triple-product} for definitions of the spaces $\xprod[L]{A,B,C}$ and $\yprod[L]{A,B,C}$. Recall that $\xprod[L]{A,B,C}$ is the image of $\yprod[L]{A,B,C}$ under the forgetful map $f$, given by $f(L',L'',L''') = L'''$ for each $(L',L'',L''')\in\yprod[L]{A,B,C}$.
 
 \begin{lemma}
 Given $A,B,C\in\matrices$ with $\ro{C}=\co{B}$, $\ro{B}=\co{A}$ and a tuple of flags $(L,L',L'',L''')\in\flags^4$ with $(L,L')\in\mathcal{O}_A$, $(L',L'')\in\mathcal{O}_B$ and $(L'',L''')\in\mathcal{O}_C$,
@@ -899,7 +899,7 @@ Given $A,B,C\in\matrices$ with $\ro{C}=\co{B}$, $\ro{B}=\co{A}$ and a tuple of f
 \begin{proof}
 Given $\alpha\in G_L$, $\beta\in G_{L'}$ and $\gamma\in G_{L''}$, $(L,\alpha L',\alpha\beta L'',\alpha\beta\gamma L''')\in\yprod{A,B,C}$ since $(L,\alpha L')=\alpha(L,L')\in\mathcal{O}_A$, $(\alpha L',\alpha\beta L'')=\alpha\beta(L',L'')\in\mathcal{O}_B$ and $(\alpha\beta L'',\alpha\beta\gamma L''')=\alpha\beta\gamma(L'',L''')\in\mathcal{O}_C$. This shows $G_L G_{L'} G_{L''}L'''\in\xprod[L]{A,B,C}$.
 
-$\xprod[L]{A,B,C}$ is the image of $\yprod[L]{A,B,C}$ under the forgetful map $(N',N'',N''')\mapsto N'''$. Given $(N',N'',N''')\in\yprod[L]{A,B,C}$, there exist $\sigma_1,\sigma_2,\sigma_3\in G$ such that $(L,N') = \sigma_1(L,L')$, $(N',N'') = \sigma_2(L',L'')$ and $(N'',N''') = \sigma_3(L'',L''')$; then $N' = \sigma_1 L' = \sigma_2 L'$, $N'' = \sigma_2 L'' = \sigma_3 L''$ and $N''' = \sigma_3 L'''$. Thus
+Given $(N',N'',N''')\in\yprod[L]{A,B,C}$, there exist $\sigma_1,\sigma_2,\sigma_3\in G$ such that $(L,N') = \sigma_1(L,L')$, $(N',N'') = \sigma_2(L',L'')$ and $(N'',N''') = \sigma_3(L'',L''')$; then $N' = \sigma_1 L' = \sigma_2 L'$, $N'' = \sigma_2 L'' = \sigma_3 L''$ and $N''' = \sigma_3 L'''$. Thus
 \begin{equation*}
 (L,N',N'',N''') = (L,\sigma_1 L', \sigma_1(\sigma_1^{-1}\sigma_2)L'', \sigma_1(\sigma_1^{-1}\sigma_2)(\sigma_2^{-1}\sigma_3)L''')
 \end{equation*}
@@ -918,7 +918,15 @@ Given $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and $L\in\fla
 \end{corollary}
 
 \begin{proof}
-$\xprod[L]{A,B,C}$ is the image of $\yprod[L]{A,B,C}$ under the forgetful map $(L',L'',L''')\mapsto L'''$, which is continuous. Lemma \ref{lemma:irreducible-y-triple} shows that $\yprod[L]{A,B,C}$ is irreducible, so it follows $\xprod[L]{A,B,C}$ is irreducible.
+$\xprod[L]{A,B,C}$ is the image of $\yprod[L]{A,B,C}$ under the forgetful map $f$ and $\yprod[L]{A,B,C}$ is irreducible, by Lemma \ref{lemma:irreducible-y-triple}, so $\xprod[L]{A,B,C}$ is irreducible.
+\end{proof}
+
+\begin{lemma}\label{lemma:generic-triple-product}
+Given matrices $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and $L\in\flags_{\ro{A}}$, there is a unique open $G_L$-orbit in $\xprod[L]{A,B,C}$.
+\end{lemma}
+
+\begin{proof}
+$\xprod[L]{A,B,C}$ is irreducible, by Corollary \ref{lemma:irreducible-x-triple}, and consists of finitely many $G_L$-orbits, so contains a dense $G_L$-orbit. In particular, there is $D\in\matrices$ such that $\overline{\xprod[L]{D}}=\xprod[L]{A,B,C}$. Lemma \ref{lemma:locally-closed-orbits} shows that the $G_L$-orbits are locally closed in $\xprod[L]{A,B,C}$. In particular, $\xprod[L]{D}$ is open in $\overline{\xprod[L]{D}} = \xprod[L]{A,B,C}$. Therefore, there is an open $G_L$-orbit in $\xprod[L]{A,B,C}$. There is a unique open $G_L$-orbit since $\xprod[L]{A,B,C}$ is irreducible.
 \end{proof}
 
 \begin{definition}
@@ -935,21 +943,29 @@ Given $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and $L\in\fla
 Given $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and $L\in\flags_{\ro{A}}$, $\zprod[L]{(AB)C}$ is open in $\yprod[L]{A,B,C}$.
 \end{lemma}
 
-\begin{proof}[{\color{red}Proof -- to be written}]
+\begin{proof}
+\begin{equation*}
+f^{-1}\xprod[L]{A\ast B,C} = \left\{ (L',L'',L''')\in\yprod[L]{A,B,C}: \dim\left(\frac{L_i}{L_i\cap L_j''}\right) \text{ is maximal, for each }i,j\in\integers \right\}
+\end{equation*}
+is open in $\yprod[L]{A,B,C}$ since $f^{-1}\xprod[L]{A\ast B,C}$ is given by {\color{red}finitely many} open conditions{\color{red}(*)}. 
 \end{proof}
 
 \begin{lemma}\label{lemma:zprod-open-in-yprod-right}
 Given $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and $L\in\flags_{\ro{A}}$, $\zprod[L]{A(BC)}$ is open in $\yprod[L]{A,B,C}$.
 \end{lemma}
 
-\begin{proof}[{\color{red}Proof -- to be written}]
+\begin{proof}
+\begin{equation*}
+f^{-1}\xprod[L]{A,B\ast C} = \left\{ (L',L'',L''')\in\yprod[L]{A,B,C}: \dim\left(\frac{L_i'}{L_i'\cap L_j'''}\right) \text{ is maximal, for each }i,j\in\integers \right\}
+\end{equation*}
+is open in $\yprod[L]{A,B,C}$, as it is determined by {\color{red}finitely many} open conditions.
 \end{proof}
 
-\begin{lemma}[Conjecture??]\label{lemma:open-embeddings}
+\begin{lemma}[Conjecture??]\label{lemma:open-embeddings-in-x}
 Given $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and $L\in\flags_{\ro{A}}$, $\xprod[L]{A\ast B,C}$ and $\xprod[L]{A,B\ast C}$ are open and dense in $\xprod[L]{A,B,C}$.
 \end{lemma}
 
-\begin{proof}[{\color{red}Proof -- to be written. }]
+\begin{proof}[Ideas]
 Question: should this result be removed or changed into a conjecture, since it is stronger than the results above which will be used to prove associativity? In particular, if $f$ is shown to be an open map then this result follows from Lemma \ref{lemma:zprod-open-in-yprod-left} and Lemma \ref{lemma:zprod-open-in-yprod-right}.
 \end{proof}
 
@@ -957,32 +973,12 @@ Question: should this result be removed or changed into a conjecture, since it i
 Given $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$, $(A\ast B)\ast C = A\ast (B\ast C)$.
 \end{proposition}
 
-{\color{gray}
-\begin{proof}[Proof - original]
-Take $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and fix $L\in\flags_{\ro{A}}$. $\xprod[L]{A,B,C}$ is irreducible, by Lemma \ref{lemma:irreducible-x-triple}, and is the union of finitely many disjoint locally closed subsets, namely
-\begin{equation*}
-\xprod[L]{A,B,C} = \bigcup_{D\in\matrices_{A,B,C}} \xprod[L]{D}.
-\end{equation*}
-Therefore, exactly one of the $\xprod[L]{D}$ is open and dense in $\xprod[L]{A,B,C}$. $\xprod[L]{A\ast B,C}$ is open and dense in $\xprod[L]{A,B,C}$, by Lemma \ref{lemma:open-embeddings}. It then follows that the maximum $G_L$-orbit $\xprod[L]{(A\ast B)\ast C}$ in $\xprod[L]{A\ast B,C}$ is open and dense in $\xprod[L]{A,B,C}$. Similarly, $\xprod[L]{A\ast(B\ast C)}$ is open and dense in $\xprod[L]{A,B\ast C}$ which is in turn open and dense in $\xprod[L]{A,B,C}$. $\xprod[L]{(A\ast B)\ast C}$ and $\xprod[L]{A\ast(B\ast C)}$ are both a single orbit for the action of $G_L$ and intersect non-trivially since $\xprod[L]{A,B,C}$ is irreducible, therefore $\xprod[L]{(A\ast B)\ast C} = \xprod[L]{A\ast(B\ast C)}$, which means $(A\ast B)\ast C = A\ast(B\ast C)$.
-\end{proof}
-}
-
 \begin{proof}
-Take $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and fix $L\in\flags_{\ro{A}}$. Let $f\colon\yprod[L]{A,B,C}\to\xprod[L]{A,B,C}$ be the restriction of the forgetful map $(L',L'',L''')\mapsto L'''$. $\yprod[L]{A,B,C}$ is an irreducible topological space, by \ref{lemma:irreducible-y-triple}.
+Take $A,B,C\in\matrices$ with $\co{A}=\ro{B}$ and $\co{B}=\ro{C}$ and fix $L\in\flags_{\ro{A}}$.
 
-\begin{equation*}
-f^{-1}\xprod[L]{A\ast B,C} = \left\{ (L',L'',L''')\in\yprod[L]{A,B,C}: \dim\left(\frac{L_i}{L_i\cap L_j''}\right) \text{ is maximal, for each }i,j\in\integers \right\}
-\end{equation*}
-is open in $\yprod[L]{A,B,C}$ since $f^{-1}\xprod[L]{A\ast B,C}$ is given by {\color{red}finitely many open conditions.} 
+$\xprod[L]{(A\ast B)\ast C}$ is open in $\xprod[L]{A\ast B,C}$, so $f^{-1}\xprod[L]{(A\ast B)\ast C}$ is open in $f^{-1}\xprod[L]{A\ast B,C}$. Lemma \ref{lemma:zprod-open-in-yprod-left} shows that $f^{-1}\xprod[L]{A\ast,B,C}$ is open in $\yprod[L]{A,B,C}$, so $f^{-1}\xprod[L]{(A\ast B)\ast C}$ is open in $\yprod[L]{A,B,C}$. Similarly, $\xprod[L]{A\ast(B\ast C)}$ is open in $\xprod[L]{A,B\ast C}$ and $f^{-1}\xprod[L]{A,B\ast C}$ is open in $\yprod[L]{A,B,C}$, by Lemma \ref{lemma:zprod-open-in-yprod-right}, so $f^{-1}\xprod[L]{A\ast(B\ast C)}$ is open in $\yprod[L]{A,B,C}$.
 
-$\xprod[L]{(A\ast B)\ast C}$ is open in $\xprod[L]{A\ast B,C}$, so $f^{-1}\xprod[L]{(A\ast B)\ast C}$ is open in $f^{-1}\xprod[L]{A\ast B,C}$, which is open in $\yprod[L]{A,B,C}$, so $f^{-1}\xprod[L]{(A\ast B)\ast C}$ is open and dense in $\yprod[L]{A,B,C}$.
-
-\begin{equation*}
-f^{-1}\xprod[L]{A,B\ast C} = \left\{ (L',L'',L''')\in\yprod[L]{A,B,C}: \dim\left(\frac{L_i'}{L_i'\cap L_j'''}\right) \text{ is maximal, for each }i,j\in\integers \right\}
-\end{equation*}
-is open in $\yprod[L]{A,B,C}$, {\color{red}being determined by finitely many open conditions.}
-
-$\xprod[L]{A\ast(B\ast C)}$ is open in $\xprod[L]{A,B\ast C}$, so $f^{-1}\xprod[L]{A\ast(B\ast C)}$ is open in $f^{-1}\xprod[L]{A,B\ast C}$, which is open in $\yprod[L]{A,B,C}$, so $f^{-1}\xprod[L]{A\ast(B\ast C)}$ is open in $\yprod[L]{A,B,C}$. Then $f^{-1}\xprod[L]{(A\ast B)\ast C}$ and $f^{-1}\xprod[L]{A\ast(B\ast C}$ are both nonempty and open in the irreducible space $\yprod[L]{A,B,C}$, so $f^{-1}\xprod[L]{(A\ast B)\ast C}\cap \xprod[L]{A\ast(B\ast C)}$ is non-empty. It follows that the $G_L$-orbits $\xprod[L]{(A\ast B)\ast C}$ and $\xprod[L]{A\ast (B\ast C)}$ coincide and thus $(A\ast B)\ast C=A\ast(B\ast C)$.
+Lemma \ref{lemma:irreducible-y-triple} shows that $\yprod[L]{A,B,C}$ is irreducible, so $f^{-1}\xprod[L]{(A\ast B)\ast C}$ and $f^{-1}\xprod[L]{A\ast(B\ast C)}$ have nonempty intersection. Therefore the $G_L$-orbits $\xprod[L]{(A\ast B)\ast C}$ and $\xprod[L]{A\ast(B\ast C)}$ intersect nontrivially, so are the same $G_L$-orbit. Thus $(A\ast B)\ast C= A\ast(B\ast C)$. 
 \end{proof}
 
 
