--- a/preamble.sty
+++ b/preamble.sty
@@ -142,6 +142,9 @@
 \newcommand{\ro}{\operatorname{ro}}
 \newcommand{\co}{\operatorname{co}}
 
+% weight of the characteristic matrix
+\newcommand{\weight}{\operatorname{wt}}
+
 % PRODUCT(S) OF ORBITS
 \newcommand{\xprod}[2][]{X_{#2}^{#1}}
 \newcommand{\yprod}[2][]{Y_{#2}^{#1}}
